--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,13 +1,3 @@
-
-.helloworld-label {
-    font-size: 36px;
-    font-weight: bold;
-    color: #ffffff;
-    background-color: rgba(10,10,10,0.7);
-    border-radius: 5px;
-    padding: .5em;
-}
-
 .icon-grey {
 	background-image: url("grey.png");
 	width: 16px;
@@ -36,4 +26,9 @@
 	background-image: url("clock.png");
 	width: 16px;
 	height: 16px;
+}
+
+.error {
+	color: #ff0000;
+	font-weight: bold;
 }
